tests/snapshots/parser_error_fixtures/missing_module_closing_brace.snap
---
source: tests/error_fixtures/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/missing_module_closing_brace.flx
== compile ==
failed (parse)
== diagnostics ==
error[E076]: Missing Closing Delimiter

Expected a closing `}` to match this opening `{`.

  examples/parser_errors/missing_module_closing_brace.flx:6:13
  |
6 | module Math {
  |             ^

Note:
  while parsing module `Math`
== stdout ==
<not executed>
