tests/snapshots/parser_error_fixtures/missing_row_tail_in_function_type_effect.snap
---
source: tests/error_fixtures/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/missing_row_tail_in_function_type_effect.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Unexpected Token

Expected row variable name after `|` in effect expression.

  examples/parser_errors/missing_row_tail_in_function_type_effect.flx:1:31
  |
1 | let f: (Int) -> Int with IO | = /(x: Int) -> x
  |                               ^

Hint:
  Write row tails as `... | e` where `e` is a lowercase identifier.
== stdout ==
<not executed>
